Changed folder name and title

--- a/floating-cubes/index.html
+++ b/floating-cubes/index.html
@@ -11,7 +11,7 @@
     <title>Animation</title>
   </head>
   <body>
-    <div class="title">Test Animation</div>
+    <div class="title">Floating Cubes Animation</div>
     <div class="main-area">
       <div class="circles">
         <div></div>
